# anime-data-pipeline

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  dbt_project.yml  deploy-local.sh  destroy-local.sh  main.tf  profiles.yml  pyproject.toml
.github/workflows/: build.yaml  test.yaml
dbt/macros/: convert_to_date.sql  generate_schema_name.sql
dbt/models/: sources.yml
dbt/models/dimension/: dimension_media.sql  dimension_user.sql  schema.yml
dbt/models/fact/: fact_anime.sql  schema.yml
dbt/models/marts/: anime_scores.sql  schema.yml
dbt/models/staging/: schema.yml  stg_media.sql  stg_user.sql
helm/: Dockerfile  values.yaml
queries/: anilist.graphql  anime_scores.sql  count_scores.sql  count_scores_by_top_genre.sql  count_scores_by_top_tag.sql
scratch/: scratch.ipynb
src/anime_data_pipeline/: definitions.py
src/anime_data_pipeline/defs/: assets.py  jobs.py  project.py  resources.py  schedules.py
src/anime_data_pipeline/lib/: schemas.py
terraform/: .terraform.lock.hcl  main.tf
tests/: test_assets.py
