[project]
name = "anime_data_pipeline"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-duckdb>=0.26.12",
    "dagster-duckdb-pandas>=0.26.12",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]

[project.entry-points]
"dagster_dg.plugin" = { anime_data_pipeline = "anime_data_pipeline.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "anime_data_pipeline"


[tool.dg.project.python_environment]
active = true
