[project]
name = "anime_data_pipeline"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-dbt>=0.26.12",
    "dagster-duckdb>=0.26.12",
    "dagster-duckdb-pandas>=0.26.12",
    "dagster-k8s>=0.26.13",
    "dagster-postgres>=0.26.13",
    "dagster-webserver>=1.10.12",
    "dbt-duckdb>=1.9.3",
    "duckdb>=1.2.2",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
]

[project.entry-points]
"dagster_dg.plugin" = { anime_data_pipeline = "anime_data_pipeline.lib"}

[dependency-groups]
dev = [
    "dagster-dg>=0.26.13",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "anime_data_pipeline"


[tool.dg.project.python_environment]
active = true
